--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -174,10 +174,17 @@
     <string name="lockscreen_weather_omni_style_title">Omni style</string>
     <string name="lockscreen_weather_pixel_style_title">Pixel style</string>
     <!-- Battery health -->
-    <string name="battery_health_title">Battery health</string>
-    <string name="battery_health_summary">Monitor the battery health of your device</string>
-    <string name="current_battery_capacity">Current battery capacity</string>
-    <string name="current_battery_capacity_summary">The current battery capacity measured by the kernel</string>
-    <string name="designed_battery_capacity">Designed battery capacity</string>
-    <string name="designed_battery_capacity_summary">The battery capacity designed by the manufacturer</string>
+    <string name="battery_health_title">Zdrowie bateri</string>
+    <string name="battery_health_summary">Monitoruje zdrowie twojej bateri</string>
+    <string name="current_battery_capacity">Obecna pojemność bateri</string>
+    <string name="current_battery_capacity_summary">Obecna pojemność bateri:</string>
+    <string name="designed_battery_capacity">Fabryczna pojemność bateri</string>
+    <string name="designed_battery_capacity_summary">Pojemność bateri według producenta</string>
+
+    <!-- Smart charging -->
+    <string name="smart_charging_title">Inteligetne ładowanie</string>
+    <string name="smart_charging_summary">Ustaw maksymaly poziom naładowania</string>
+    <string name="smart_charging_switch_title">Używaj inteligentego ładowania</string>
+    <string name="smart_charging_level_title">Poziom ładowania</string>
+    <string name="smart_charging_footer">Inteligetne ładowanie pozwała zwieszyć żywotność Twojego ogniwa</string>
 </resources>
