--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -214,7 +214,10 @@
     <string name="smart_charging_title">Smart Charging</string>
     <string name="smart_charging_summary">Set maximum charging level</string>
     <string name="smart_charging_switch_title">Use Smart charging</string>
-    <string name="smart_charging_level_title">Trigger level</string>
+    <string name="smart_charging_level_title">Trigger level stop</string>
+    <string name="smart_charging_level_min_title">Trigger level start</string>
+    <string name="smart_charging_night_switch_title">Use Smart charging night (TEST)</string>
     <string name="smart_charging_footer">Smart Charging allows you to set maximum charging level to extend the lifespan of your battery</string>
+
 
 </resources>
