--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -189,4 +189,6 @@
     <string name="smart_charging_level_min_title">Trigger level start</string>
     <string name="smart_charging_night_switch_title">Nocne ładowanie (TEST)</string>
     <string name="smart_charging_footer">Inteligetne ładowanie pozwała zwieszyć żywotność Twojego ogniwa. Nocne ładowanie uruchomi ładowanie bateri dopiero ok 4 w nocy tak aby na rano telefon był naladowany chroniąc twoją baterie</string>
+    <string name="smart_charging_reset_stats_title">Reset statystyk bateri</string>
+    <string name="smart_charging_reset_stats_summary">Reset statystyk bateri po uzyskaniu wskzanego poziomiu</string>
 </resources>
